Fix media query for h1 tag on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -337,4 +337,8 @@ input[type="radio"] {
   .modal-body {
     font-size: 1.2rem;
   }
+
+  h1 {
+    font-size: 3.5rem;
+  }
 }
